--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <template data-template>
         <article class="ret">
             <h2 class="titel" data-navn></h2>
-            <img src="xx" alt="" class="billede" data-billede>
+            <img src="" alt="" class="billede" data-billede>
             <p class="kort_beskrivelse" data-kortbeskrivelse></p>
              <div><span class="pris" data-pris></span> kr.</div>
         </article>
