--- a/indexOld.html
+++ b/indexOld.html
@@ -4,10 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link type="text/css" href="css/styleOp.css" rel="stylesheet">
+    <link type="text/css" href="css/styleOld.css" rel="stylesheet">
 </head>
 
 <body>
+
+    <header>
+        <h1>Bistro Babushka</h1>
+        <nav>
+            <button id="filter-alle">Alle</button>
+            <button id="filter-forretter">Forretter</button>
+            <button id="filter-hovedretter">Hovedretter</button>
+            <button id="filter-desserter">Desserter</button>
+            <button id="filter-drikkevarer">Drikkevarer</button>
+
+            <button class="alfa markeret">Alfabetisk</button>
+            <button class="prisop">Stigende pris</button>
+            <button class="prisned">Faldende pris</button>
+        </nav>
+    </header>
+
     <div id="popup">
         <div id="popupindhold">
             <img src="" alt="" class="billede" data-billede>
@@ -20,19 +36,6 @@
             </details>
         </div>
     </div>
-
-    <header>
-        <h1>Bistro Babushka</h1>
-        <nav>
-            <button>Alle</button>
-            <button>Forretter</button>
-            <button>Hovedretter</button>
-            <button>Desserter</button>
-            <button>Drikkevarer</button>
-            <button>Side orders</button>
-
-        </nav>
-    </header>
 
     <main>
         <h2 id="overskrift" data-overskrift>Menu</h2>
@@ -55,7 +58,16 @@
         </section>
     </footer>
 
-    <script src="js/getJsonOp.js"></script>
+    <script src="js/getJsonOld.js"></script>
 </body>
 
 </html>
+
+<!--
+
+index-dyn.html
+index-dynFilterAlt.html
+index-dynStart.html
+index-All.html
+indexCats.html
+-->
