--- a/index.html
+++ b/index.html
@@ -32,17 +32,11 @@
     <!-- HEADER med nav og overskrift -->
     <div class="wrapper">
         <header>
-            <h1>Bistro Babushka</h1>
-<!--
-            <div class="menu">
-                <button class="burger">
-                    <div class="bar1"></div>
-                    <div class="bar2"></div>
-                    <div class="bar3"></div>
-                </button>
-            </div>
--->
-                <nav id="sticky">
+        <a href="index.html">
+            <img src="imgs/logo/logo4.svg" alt="Logo for Bistro Babushka">
+        </a>
+        <h1>Bistro Babushka</h1>
+                <nav>
                     <button>Alle</button>
                     <button>Forretter</button>
                     <button>Hovedretter</button>
@@ -67,11 +61,11 @@
 
     </div>
     <footer>
-            <section>
-                <address>Adresse:<br>Grønnegade 97<br>1234 København K</address>
-                <aside>Åbningstider:<br>Mandag - fredag 10:30 22:00</aside>
-            </section>
-        </footer>
+        <section>
+            <address>Adresse:<br>Grønnegade 97<br>1234 København K</address>
+            <aside>Åbningstider:<br>Mandag - fredag 10:30 22:00</aside>
+        </section>
+    </footer>
 
     <!-- Template -->
 
@@ -80,12 +74,15 @@
            <div class="ret-overlay"></div>
            <img src="" alt="" class="billede" data-billede>
            <div class="ret-white">
-           <h3 class="ret-titel" data-navn></h3>
-           <p class="kort_beskrivelse" data-kortbeskrivelse></p>
-           <div class="priss"><span class="pris" data-pris></span> kr.</div>
+               <h3 class="ret-titel" data-navn></h3>
+               <p class="kort_beskrivelse" data-kortbeskrivelse></p>
+               <div class="priss">
+                   <span class="pris" data-pris></span> kr.
+               </div>
            </div>
         </article>
     </template>
+
     <script src="js/getJson.js"></script>
 </body>
 
